trunk/src/edu/udel/cis/vsl/abc/preproc/common/PreprocessorParser.java
// $ANTLR 3.4 PreprocessorParser.g 2014-03-17 17:27:25

package edu.udel.cis.vsl.abc.preproc.common;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class PreprocessorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABSTRACT", "ALIGNAS", "ALIGNOF", "AMPERSAND", "AND", "ARROW", "ASSIGN", "ASSUME", "AT", "ATOMIC", "AUTO", "BIG_O", "BITANDEQ", "BITOR", "BITOREQ", "BITXOR", "BITXOREQ", "BOOL", "BREAK", "BinaryExponentPart", "CASE", "CChar", "CHAR", "CHARACTER_CONSTANT", "CHOOSE", "CIVLATOM", "CIVLATOMIC", "COLLECTIVE", "COLON", "COMMA", "COMMENT", "COMPLEX", "CONST", "CONTIN", "CONTINUE", "DEFAULT", "DEFINED", "DERIV", "DIV", "DIVEQ", "DO", "DOT", "DOTDOT", "DOUBLE", "DecimalConstant", "DecimalFloatingConstant", "Digit", "ELLIPSIS", "ELSE", "ENSURES", "ENUM", "EQUALS", "EXISTS", "EXTERN", "EscapeSequence", "ExponentPart", "FALSE", "FLOAT", "FLOATING_CONSTANT", "FOR", "FORALL", "FloatingSuffix", "FractionalConstant", "GENERIC", "GOTO", "GT", "GTE", "HASH", "HASHHASH", "HEADER_NAME", "HERE", "HexEscape", "HexFractionalConstant", "HexPrefix", "HexQuad", "HexadecimalConstant", "HexadecimalDigit", "HexadecimalFloatingConstant", "IDENTIFIER", "IF", "IMAGINARY", "IMPLIES", "INLINE", "INPUT", "INT", "INTEGER_CONSTANT", "INVARIANT", "IdentifierNonDigit", "IntegerSuffix", "LCURLY", "LONG", "LPAREN", "LSLIST", "LSQUARE", "LT", "LTE", "LongLongSuffix", "LongSuffix", "MINUSMINUS", "MOD", "MODEQ", "NEQ", "NEWLINE", "NORETURN", "NOT", "NewLine", "NonDigit", "NonZeroDigit", "NotLineStart", "OR", "OTHER", "OUTPUT", "OctalConstant", "OctalDigit", "OctalEscape", "PDEFINE", "PELIF", "PELSE", "PENDIF", "PERROR", "PIF", "PIFDEF", "PIFNDEF", "PINCLUDE", "PLINE", "PLUS", "PLUSEQ", "PLUSPLUS", "PP_NUMBER", "PRAGMA", "PUNDEF", "QMARK", "RCURLY", "REAL", "REGISTER", "REQUIRES", "RESTRICT", "RESULT", "RETURN", "ROOT", "RPAREN", "RSLIST", "RSQUARE", "SCOPE", "SCOPEOF", "SChar", "SELF", "SEMI", "SHIFTLEFT", "SHIFTLEFTEQ", "SHIFTRIGHT", "SHIFTRIGHTEQ", "SHORT", "SIGNED", "SIZEOF", "SPAWN", "STAR", "STAREQ", "STATIC", "STATICASSERT", "STRING_LITERAL", "STRUCT", "SUB", "SUBEQ", "SWITCH", "THREADLOCAL", "TILDE", "TRUE", "TYPEDEF", "UNIFORM", "UNION", "UNSIGNED", "UniversalCharacterName", "UnsignedSuffix", "VOID", "VOLATILE", "WHEN", "WHILE", "WS", "Zero", "BARRIER", "COLLAPSE", "COPYIN", "CRITICAL", "DYNAMIC", "FLUSH", "FST_PRIVATE", "GUIDED", "LST_PRIVATE", "MASTER", "NONE", "NOWAIT", "NUM_THREADS", "OMP", "ORDERED", "PARALLEL", "PRIVATE", "REDUCTION", "RUNTIME", "SCHEDULE", "SECTION", "SECTIONS", "SHARED", "THD_PRIVATE", "Tokens", "COPYPRIVATE", "BODY", "EXPR", "FILE", "PARAMLIST", "SEQUENCE", "TEXT_BLOCK"
    };

    public static final int EOF=-1;
    public static final int ABSTRACT=4;
    public static final int ALIGNAS=5;
    public static final int ALIGNOF=6;
    public static final int AMPERSAND=7;
    public static final int AND=8;
    public static final int ARROW=9;
    public static final int ASSIGN=10;
    public static final int ASSUME=11;
    public static final int AT=12;
    public static final int ATOMIC=13;
    public static final int AUTO=14;
    public static final int BIG_O=15;
    public static final int BITANDEQ=16;
    public static final int BITOR=17;
    public static final int BITOREQ=18;
    public static final int BITXOR=19;
    public static final int BITXOREQ=20;
    public static final int BOOL=21;
    public static final int BREAK=22;
    public static final int BinaryExponentPart=23;
    public static final int CASE=24;
    public static final int CChar=25;
    public static final int CHAR=26;
    public static final int CHARACTER_CONSTANT=27;
    public static final int CHOOSE=28;
    public static final int CIVLATOM=29;
    public static final int CIVLATOMIC=30;
    public static final int COLLECTIVE=31;
    public static final int COLON=32;
    public static final int COMMA=33;
    public static final int COMMENT=34;
    public static final int COMPLEX=35;
    public static final int CONST=36;
    public static final int CONTIN=37;
    public static final int CONTINUE=38;
    public static final int DEFAULT=39;
    public static final int DEFINED=40;
    public static final int DERIV=41;
    public static final int DIV=42;
    public static final int DIVEQ=43;
    public static final int DO=44;
    public static final int DOT=45;
    public static final int DOTDOT=46;
    public static final int DOUBLE=47;
    public static final int DecimalConstant=48;
    public static final int DecimalFloatingConstant=49;
    public static final int Digit=50;
    public static final int ELLIPSIS=51;
    public static final int ELSE=52;
    public static final int ENSURES=53;
    public static final int ENUM=54;
    public static final int EQUALS=55;
    public static final int EXISTS=56;
    public static final int EXTERN=57;
    public static final int EscapeSequence=58;
    public static final int ExponentPart=59;
    public static final int FALSE=60;
    public static final int FLOAT=61;
    public static final int FLOATING_CONSTANT=62;
    public static final int FOR=63;
    public static final int FORALL=64;
    public static final int FloatingSuffix=65;
    public static final int FractionalConstant=66;
    public static final int GENERIC=67;
    public static final int GOTO=68;
    public static final int GT=69;
    public static final int GTE=70;
    public static final int HASH=71;
    public static final int HASHHASH=72;
    public static final int HEADER_NAME=73;
    public static final int HERE=74;
    public static final int HexEscape=75;
    public static final int HexFractionalConstant=76;
    public static final int HexPrefix=77;
    public static final int HexQuad=78;
    public static final int HexadecimalConstant=79;
    public static final int HexadecimalDigit=80;
    public static final int HexadecimalFloatingConstant=81;
    public static final int IDENTIFIER=82;
    public static final int IF=83;
    public static final int IMAGINARY=84;
    public static final int IMPLIES=85;
    public static final int INLINE=86;
    public static final int INPUT=87;
    public static final int INT=88;
    public static final int INTEGER_CONSTANT=89;
    public static final int INVARIANT=90;
    public static final int IdentifierNonDigit=91;
    public static final int IntegerSuffix=92;
    public static final int LCURLY=93;
    public static final int LONG=94;
    public static final int LPAREN=95;
    public static final int LSLIST=96;
    public static final int LSQUARE=97;
    public static final int LT=98;
    public static final int LTE=99;
    public static final int LongLongSuffix=100;
    public static final int LongSuffix=101;
    public static final int MINUSMINUS=102;
    public static final int MOD=103;
    public static final int MODEQ=104;
    public static final int NEQ=105;
    public static final int NEWLINE=106;
    public static final int NORETURN=107;
    public static final int NOT=108;
    public static final int NewLine=109;
    public static final int NonDigit=110;
    public static final int NonZeroDigit=111;
    public static final int NotLineStart=112;
    public static final int OR=113;
    public static final int OTHER=114;
    public static final int OUTPUT=115;
    public static final int OctalConstant=116;
    public static final int OctalDigit=117;
    public static final int OctalEscape=118;
    public static final int PDEFINE=119;
    public static final int PELIF=120;
    public static final int PELSE=121;
    public static final int PENDIF=122;
    public static final int PERROR=123;
    public static final int PIF=124;
    public static final int PIFDEF=125;
    public static final int PIFNDEF=126;
    public static final int PINCLUDE=127;
    public static final int PLINE=128;
    public static final int PLUS=129;
    public static final int PLUSEQ=130;
    public static final int PLUSPLUS=131;
    public static final int PP_NUMBER=132;
    public static final int PRAGMA=133;
    public static final int PUNDEF=134;
    public static final int QMARK=135;
    public static final int RCURLY=136;
    public static final int REAL=137;
    public static final int REGISTER=138;
    public static final int REQUIRES=139;
    public static final int RESTRICT=140;
    public static final int RESULT=141;
    public static final int RETURN=142;
    public static final int ROOT=143;
    public static final int RPAREN=144;
    public static final int RSLIST=145;
    public static final int RSQUARE=146;
    public static final int SCOPE=147;
    public static final int SCOPEOF=148;
    public static final int SChar=149;
    public static final int SELF=150;
    public static final int SEMI=151;
    public static final int SHIFTLEFT=152;
    public static final int SHIFTLEFTEQ=153;
    public static final int SHIFTRIGHT=154;
    public static final int SHIFTRIGHTEQ=155;
    public static final int SHORT=156;
    public static final int SIGNED=157;
    public static final int SIZEOF=158;
    public static final int SPAWN=159;
    public static final int STAR=160;
    public static final int STAREQ=161;
    public static final int STATIC=162;
    public static final int STATICASSERT=163;
    public static final int STRING_LITERAL=164;
    public static final int STRUCT=165;
    public static final int SUB=166;
    public static final int SUBEQ=167;
    public static final int SWITCH=168;
    public static final int THREADLOCAL=169;
    public static final int TILDE=170;
    public static final int TRUE=171;
    public static final int TYPEDEF=172;
    public static final int UNIFORM=173;
    public static final int UNION=174;
    public static final int UNSIGNED=175;
    public static final int UniversalCharacterName=176;
    public static final int UnsignedSuffix=177;
    public static final int VOID=178;
    public static final int VOLATILE=179;
    public static final int WHEN=180;
    public static final int WHILE=181;
    public static final int WS=182;
    public static final int Zero=183;
    public static final int BARRIER=195;
    public static final int COLLAPSE=212;
    public static final int COPYIN=221;
    public static final int CRITICAL=222;
    public static final int DYNAMIC=232;
    public static final int FLUSH=248;
    public static final int FST_PRIVATE=251;
    public static final int GUIDED=258;
    public static final int LST_PRIVATE=286;
    public static final int MASTER=291;
    public static final int NONE=297;
    public static final int NOWAIT=300;
    public static final int NUM_THREADS=301;
    public static final int OMP=306;
    public static final int ORDERED=308;
    public static final int PARALLEL=314;
    public static final int PRIVATE=330;
    public static final int REDUCTION=335;
    public static final int RUNTIME=345;
    public static final int SCHEDULE=346;
    public static final int SECTION=350;
    public static final int SECTIONS=351;
    public static final int SHARED=354;
    public static final int THD_PRIVATE=372;
    public static final int Tokens=377;
    public static final int COPYPRIVATE=413;
    public static final int BODY=414;
    public static final int EXPR=415;
    public static final int FILE=416;
    public static final int PARAMLIST=417;
    public static final int SEQUENCE=418;
    public static final int TEXT_BLOCK=419;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public PreprocessorParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public PreprocessorParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return PreprocessorParser.tokenNames; }
    public String getGrammarFileName() { return "PreprocessorParser.g"; }


    @Override
    public void emitErrorMessage(String msg) { // don't try to recover!
        throw new RuntimeException(msg);
    }


    public static class file_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "file"
    // PreprocessorParser.g:45:1: file : block EOF -> ^( FILE ( block )? EOF ) ;
    public final PreprocessorParser.file_return file() throws RecognitionException {
        PreprocessorParser.file_return retval = new PreprocessorParser.file_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        PreprocessorParser.block_return block1 =null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // PreprocessorParser.g:45:7: ( block EOF -> ^( FILE ( block )? EOF ) )
            // PreprocessorParser.g:45:9: block EOF
            {
            pushFollow(FOLLOW_block_in_file120);
            block1=block();

            state._fsp--;

            stream_block.add(block1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_file122);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: EOF, block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 45:19: -> ^( FILE ( block )? EOF )
            {
                // PreprocessorParser.g:45:22: ^( FILE ( block )? EOF )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(FILE, "FILE")
                , root_1);

                // PreprocessorParser.g:45:29: ( block )?
                if ( stream_block.hasNext() ) {
                    adaptor.addChild(root_1, stream_block.nextTree());

                }
                stream_block.reset();

                adaptor.addChild(root_1, 
                stream_EOF.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "file"


    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // PreprocessorParser.g:51:1: block : ( directive | textblock )* ;
    public final PreprocessorParser.block_return block() throws RecognitionException {
        PreprocessorParser.block_return retval = new PreprocessorParser.block_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorParser.directive_return directive3 =null;

        PreprocessorParser.textblock_return textblock4 =null;



        try {
            // PreprocessorParser.g:51:8: ( ( directive | textblock )* )
            // PreprocessorParser.g:51:10: ( directive | textblock )*
            {
            root_0 = (Object)adaptor.nil();


            // PreprocessorParser.g:51:10: ( directive | textblock )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==HASH||LA1_0==PDEFINE||(LA1_0 >= PERROR && LA1_0 <= PLINE)||(LA1_0 >= PRAGMA && LA1_0 <= PUNDEF)) ) {
                    alt1=1;
                }
                else if ( ((LA1_0 >= ABSTRACT && LA1_0 <= BREAK)||LA1_0==CASE||(LA1_0 >= CHAR && LA1_0 <= DEFAULT)||(LA1_0 >= DERIV && LA1_0 <= DOUBLE)||(LA1_0 >= ELLIPSIS && LA1_0 <= EXTERN)||(LA1_0 >= FALSE && LA1_0 <= FORALL)||(LA1_0 >= GENERIC && LA1_0 <= GTE)||(LA1_0 >= HASHHASH && LA1_0 <= HERE)||(LA1_0 >= IDENTIFIER && LA1_0 <= INVARIANT)||(LA1_0 >= LCURLY && LA1_0 <= LTE)||(LA1_0 >= MINUSMINUS && LA1_0 <= NOT)||(LA1_0 >= OR && LA1_0 <= OUTPUT)||(LA1_0 >= PLUS && LA1_0 <= PP_NUMBER)||(LA1_0 >= QMARK && LA1_0 <= SCOPEOF)||(LA1_0 >= SELF && LA1_0 <= UNSIGNED)||(LA1_0 >= VOID && LA1_0 <= WS)) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // PreprocessorParser.g:51:11: directive
            	    {
            	    pushFollow(FOLLOW_directive_in_block148);
            	    directive3=directive();

            	    state._fsp--;

            	    adaptor.addChild(root_0, directive3.getTree());

            	    }
            	    break;
            	case 2 :
            	    // PreprocessorParser.g:51:23: textblock
            	    {
            	    pushFollow(FOLLOW_textblock_in_block152);
            	    textblock4=textblock();

            	    state._fsp--;

            	    adaptor.addChild(root_0, textblock4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class directive_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "directive"
    // PreprocessorParser.g:62:1: directive : ( macrodef | macroundef | includeline | pragmaline | ifblock | ifdefblock | ifndefblock | errorline | lineline | nondirectiveline );
    public final PreprocessorParser.directive_return directive() throws RecognitionException {
        PreprocessorParser.directive_return retval = new PreprocessorParser.directive_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorParser.macrodef_return macrodef5 =null;

        PreprocessorParser.macroundef_return macroundef6 =null;

        PreprocessorParser.includeline_return includeline7 =null;

        PreprocessorParser.pragmaline_return pragmaline8 =null;

        PreprocessorParser.ifblock_return ifblock9 =null;

        PreprocessorParser.ifdefblock_return ifdefblock10 =null;

        PreprocessorParser.ifndefblock_return ifndefblock11 =null;

        PreprocessorParser.errorline_return errorline12 =null;

        PreprocessorParser.lineline_return lineline13 =null;

        PreprocessorParser.nondirectiveline_return nondirectiveline14 =null;



        try {
            // PreprocessorParser.g:62:11: ( macrodef | macroundef | includeline | pragmaline | ifblock | ifdefblock | ifndefblock | errorline | lineline | nondirectiveline )
            int alt2=10;
            switch ( input.LA(1) ) {
            case PDEFINE:
                {
                alt2=1;
                }
                break;
            case PUNDEF:
                {
                alt2=2;
                }
                break;
            case PINCLUDE:
                {
                alt2=3;
                }
                break;
            case PRAGMA:
                {
                alt2=4;
                }
                break;
            case PIF:
                {
                alt2=5;
                }
                break;
            case PIFDEF:
                {
                alt2=6;
                }
                break;
            case PIFNDEF:
                {
                alt2=7;
                }
                break;
            case PERROR:
                {
                alt2=8;
                }
                break;
            case PLINE:
                {
                alt2=9;
                }
                break;
            case HASH:
                {
                alt2=10;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // PreprocessorParser.g:62:13: macrodef
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_macrodef_in_directive165);
                    macrodef5=macrodef();

                    state._fsp--;

                    adaptor.addChild(root_0, macrodef5.getTree());

                    }
                    break;
                case 2 :
                    // PreprocessorParser.g:63:5: macroundef
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_macroundef_in_directive171);
                    macroundef6=macroundef();

                    state._fsp--;

                    adaptor.addChild(root_0, macroundef6.getTree());

                    }
                    break;
                case 3 :
                    // PreprocessorParser.g:64:5: includeline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_includeline_in_directive177);
                    includeline7=includeline();

                    state._fsp--;

                    adaptor.addChild(root_0, includeline7.getTree());

                    }
                    break;
                case 4 :
                    // PreprocessorParser.g:65:5: pragmaline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_pragmaline_in_directive183);
                    pragmaline8=pragmaline();

                    state._fsp--;

                    adaptor.addChild(root_0, pragmaline8.getTree());

                    }
                    break;
                case 5 :
                    // PreprocessorParser.g:66:5: ifblock
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ifblock_in_directive189);
                    ifblock9=ifblock();

                    state._fsp--;

                    adaptor.addChild(root_0, ifblock9.getTree());

                    }
                    break;
                case 6 :
                    // PreprocessorParser.g:67:5: ifdefblock
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ifdefblock_in_directive195);
                    ifdefblock10=ifdefblock();

                    state._fsp--;

                    adaptor.addChild(root_0, ifdefblock10.getTree());

                    }
                    break;
                case 7 :
                    // PreprocessorParser.g:68:5: ifndefblock
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ifndefblock_in_directive201);
                    ifndefblock11=ifndefblock();

                    state._fsp--;

                    adaptor.addChild(root_0, ifndefblock11.getTree());

                    }
                    break;
                case 8 :
                    // PreprocessorParser.g:69:5: errorline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_errorline_in_directive207);
                    errorline12=errorline();

                    state._fsp--;

                    adaptor.addChild(root_0, errorline12.getTree());

                    }
                    break;
                case 9 :
                    // PreprocessorParser.g:70:5: lineline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_lineline_in_directive213);
                    lineline13=lineline();

                    state._fsp--;

                    adaptor.addChild(root_0, lineline13.getTree());

                    }
                    break;
                case 10 :
                    // PreprocessorParser.g:71:5: nondirectiveline
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_nondirectiveline_in_directive219);
                    nondirectiveline14=nondirectiveline();

                    state._fsp--;

                    adaptor.addChild(root_0, nondirectiveline14.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "directive"


    public static class textblock_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "textblock"
    // PreprocessorParser.g:80:1: textblock : ( options {greedy=true; } : textline )+ -> ^( TEXT_BLOCK ( textline )+ ) ;
    public final PreprocessorParser.textblock_return textblock() throws RecognitionException {
        PreprocessorParser.textblock_return retval = new PreprocessorParser.textblock_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorParser.textline_return textline15 =null;

